// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar should render prop rightButtons=[{ icon: "MenuOutlined", text: "Menu" }] correctly 1`] = `
<div class="fx-nav-bar">
  <div class="fx-nav-bar_inner fx-horizontal-hairline">
    <div class="fx-nav-bar_layout">
      <div class="fx-nav-bar_left">
        <!---->
      </div>
      <div class="fx-nav-bar_title">

      </div>
      <div class="fx-nav-bar_right">
        <fx-button-group-stub pattern="borderless" shape="square" class="fx-nav-bar_button-group">
          <fx-button-stub type="default" icon="MenuOutlined" transparent="true" class="fx-nav-bar_button">Menu</fx-button-stub>
        </fx-button-group-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`NavBar should render prop title="NavBar" correctly 1`] = `
<div class="fx-nav-bar">
  <div class="fx-nav-bar_inner fx-horizontal-hairline">
    <div class="fx-nav-bar_layout">
      <div class="fx-nav-bar_left">
        <!---->
      </div>
      <div class="fx-nav-bar_title">
        NavBar
      </div>
      <div class="fx-nav-bar_right">
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`NavBar should render props showBack=true & showHome = true correctly 1`] = `
<div class="fx-nav-bar">
  <div class="fx-nav-bar_inner fx-horizontal-hairline">
    <div class="fx-nav-bar_layout">
      <div class="fx-nav-bar_left">
        <fx-button-group-stub pattern="borderless" shape="square" class="fx-nav-bar_button-group">
          <fx-button-stub type="default" icon="LeftOutlined" transparent="true" class="fx-nav-bar_button">返回</fx-button-stub>
          <fx-button-stub type="default" icon="HomeOutlined" transparent="true" class="fx-nav-bar_button">首页</fx-button-stub>
        </fx-button-group-stub>
      </div>
      <div class="fx-nav-bar_title">

      </div>
      <div class="fx-nav-bar_right">
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`NavBar should render set left & right slots correctly 1`] = `
<div class="fx-nav-bar">
  <div class="fx-nav-bar_inner fx-horizontal-hairline">
    <div class="fx-nav-bar_layout">
      <div class="fx-nav-bar_left">Left Slot</div>
      <div class="fx-nav-bar_title">

      </div>
      <div class="fx-nav-bar_right">Right Slot</div>
    </div>
  </div>
</div>
`;
